fixed small issues with light/dark mode

--- a/src/style.scss
+++ b/src/style.scss
@@ -170,7 +170,8 @@ footer {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  width: 90%;
+  width: 80%;
+  max-width: 800px;
 
   .footer__title {
     color: $main-writing-color;
@@ -178,7 +179,7 @@ footer {
     font-size: min(10vw, 40px);
 
     &--light {
-      color: black;
+      color: rgb(135, 0, 161);
     }
   }
 
